@@ -1,10 +1,6 @@
 core = 7.x
 api = 2
 
-; https://drupal.org/node/1326998 - PHP notice
-; Still on RTBC as of 9.19.2016 - jbickar
-projects[context_useragent][patch][] = "https://drupal.org/files/issues/context_useragent-undefined_offset_error-1326998-3.patch"
-
 ; https://www.drupal.org/node/2471911 Form validation fails with "the directory is not writable" when public file system is remote
 ; Committed to 7.x-1.x-dev but no new point release as of 9.19.2016 - jbickar
 projects[css_injector][patch][] = "https://www.drupal.org/files/issues/css_injector-remove_drupal_realpath-2471911-2.patch"
@@ -23,6 +19,9 @@ projects[ds][patch][] = "https://www.drupal.org/files/issues/ds_extras_field_gro
 ; https://drupal.org/node/927566 & https://drupal.org/node/860974 | Menu Links will not import/revert
 ; Has not been committed as of 9.19.2016; there is an updated patch in comment #82 on https://drupal.org/node/927566 - jbickar.
 projects[features][patch][] = "https://drupal.org/files/issues/features-parent_identifier-927566-79.patch"
+
+; https://www.drupal.org/node/2713921 | Cannot install on mysql 5.7+
+projects[jw_player][patch][] = "https://www.drupal.org/files/issues/jw-player-mysql57-2713921-8.patch"
 
 ; https://drupal.org/node/1267966 - entity tokens bugs
 ; Has not been committed as of 9.19.2016 - jbickar
