@@ -1,7 +1,7 @@
 core = 7.x
 
 api = 2
-projects[drupal][version] = "7.52"
+projects[drupal][version] = "7.56"
 
 ; Contributed modules
 projects[admin_menu][subdir] = "contrib"
@@ -17,7 +17,7 @@ projects[bean][version] = "1.11"
 projects[better_formats][subdir] = "contrib"
 projects[better_formats][version] = "1.0-beta2"
 projects[better_exposed_filters][subdir] = "contrib"
-projects[better_exposed_filters][version] = "3.2"
+projects[better_exposed_filters][version] = "3.4"
 projects[biblio][subdir] = "contrib"
 projects[biblio][version] = "1.0-rc7"
 projects[block_class][subdir] = "contrib"
@@ -31,7 +31,7 @@ projects[calendar][version] = "3.5"
 projects[cbc][subdir] = "contrib"
 projects[cbc][version] = "1.0"
 projects[colorbox][subdir] = "contrib"
-projects[colorbox][version] = "2.12"
+projects[colorbox][version] = "2.13"
 projects[computed_field][subdir] = "contrib"
 projects[computed_field][version] = "1.1"
 projects[content_access][subdir] = "contrib"
@@ -102,6 +102,8 @@ projects[globalredirect][subdir] = "contrib"
 projects[globalredirect][version] = "1.5"
 projects[google_analytics][subdir] = "contrib"
 projects[google_analytics][version] = "2.3"
+projects[hires_images][subdir] = "contrib"
+projects[hires_images][version] = "1.1"
 projects[insert][subdir] = "contrib"
 projects[insert][version] = "1.3"
 projects[job_scheduler][subdir] = "contrib"
@@ -121,7 +123,7 @@ projects[menu_block][version] = "2.7"
 projects[menu_position][subdir] = "contrib"
 projects[menu_position][version] = "1.2"
 projects[metatag][subdir] = "contrib"
-projects[metatag][version] = "1.17"
+projects[metatag][version] = "1.21"
 projects[module_filter][subdir] = "contrib"
 projects[module_filter][version] = "2.0"
 projects[mollom][subdir] = "contrib"
@@ -138,6 +140,8 @@ projects[nodeformcols][subdir] = "contrib"
 projects[nodeformcols][version] = "1.1"
 projects[openlayers][subdir] = "contrib"
 projects[openlayers][version] = "2.0-beta11"
+projects[paragraphs][subdir] = "contrib"
+projects[paragraphs][version] = "1.0-rc5"
 projects[path_redirect_import][subdir] = "contrib"
 projects[path_redirect_import][version] = "1.0-rc4"
 projects[pathauto][subdir] = "contrib"
@@ -151,27 +155,29 @@ projects[proj4js][version] = "1.2"
 projects[redirect][subdir] = "contrib"
 projects[redirect][version] = "1.0-rc3"
 projects[relation][subdir] = "contrib"
-projects[relation][version] = "1.0"
+projects[relation][version] = "1.1"
 projects[rules][subdir] = "contrib"
 projects[rules][version] = "2.9"
 projects[services][subdir] = "contrib"
-projects[services][version] = "3.17"
+projects[services][version] = "3.20"
 projects[site_verify][subdir] = "contrib"
-projects[site_verify][version] = "1.1"
+projects[site_verify][version] = "1.2"
 projects[smart_trim][subdir] = "contrib"
 projects[smart_trim][version] = "1.5"
+projects[social_share][subdir] = "contrib"
+projects[social_share][version] = "2.5"
 projects[strongarm][subdir] = "contrib"
 projects[strongarm][version] = "2.0"
 projects[taxonomy_manager][subdir] = "contrib"
 projects[taxonomy_manager][version] = "1.0"
 projects[token][subdir] = "contrib"
-projects[token][version] = "1.6"
+projects[token][version] = "1.7"
 projects[transliteration][subdir] = "contrib"
 projects[transliteration][version] = "3.2"
 projects[uuid][subdir] = "contrib"
 projects[uuid][version] = "1.0-beta2"
 projects[views][subdir] = "contrib"
-projects[views][version] = "3.14"
+projects[views][version] = "3.17"
 projects[views_bulk_operations][subdir] = "contrib"
 projects[views_bulk_operations][version] = "3.4"
 projects[views_data_export][subdir] = "contrib"
@@ -219,17 +225,12 @@ projects[context_useragent][subdir] = "contrib"
 projects[context_useragent][version] = "1.x-dev"
 projects[context_useragent][download][type] = "git"
 projects[context_useragent][download][url] = "http://git.drupal.org/project/context_useragent.git"
-projects[context_useragent][download][revision] = "8949c6d4ee7a462b49e1b08dfd7dc60f1fa7e8e8"
+projects[context_useragent][download][revision] = "3cd2c8c20cf9c075d5ccf8fe0bc2aa139823504c"
 projects[css_injector][type] = "module"
 projects[css_injector][subdir] = "contrib"
 projects[css_injector][download][type] = "git"
 projects[css_injector][download][url] = "http://git.drupal.org/project/css_injector.git"
 projects[css_injector][download][revision] = "41bee7e4421ecfc52a6b673eef6fcde875282a2b"
-projects[social_share][type] = "module"
-projects[social_share][subdir] = "contrib"
-projects[social_share][download][type] = "git"
-projects[social_share][download][url] = "http://git.drupal.org/project/social-share.git"
-projects[social_share][download][tag] = "7.x-2.1"
 projects[token_tweaks][type] = "module"
 projects[token_tweaks][subdir] = "contrib"
 projects[token_tweaks][download][type] = "git"
@@ -259,7 +260,7 @@ projects[stanford_capx][type] = module
 projects[stanford_capx][subdir] = stanford
 projects[stanford_capx][download][type] = "git"
 projects[stanford_capx][download][url] = "git@github.com:SU-SWS/stanford_capx.git"
-projects[stanford_capx][download][tag] = "7.x-2.0-php54"
+projects[stanford_capx][download][tag] = "7.x-2.2-alpha2-php54"
 projects[stanford_carousel][subdir] = "stanford"
 projects[stanford_carousel][type] = "module"
 projects[stanford_carousel][download][type] = "git"
@@ -289,12 +290,12 @@ projects[stanford_events_importer][subdir] = "stanford"
 projects[stanford_events_importer][type] = "module"
 projects[stanford_events_importer][download][type] = "git"
 projects[stanford_events_importer][download][url] = "git@github.com:SU-SWS/stanford_events_importer.git"
-projects[stanford_events_importer][download][tag] = "7.x-3.3"
+projects[stanford_events_importer][download][tag] = "7.x-3.6"
 projects[stanford_feeds_helper][subdir] = "stanford"
 projects[stanford_feeds_helper][type] = "module"
 projects[stanford_feeds_helper][download][type] = "git"
 projects[stanford_feeds_helper][download][url] = "git@github.com:SU-SWS/stanford_feeds_helper.git"
-projects[stanford_feeds_helper][download][tag] = "7.x-1.2"
+projects[stanford_feeds_helper][download][tag] = "7.x-1.2+5-dev"
 projects[stanford_gallery][subdir] = "stanford"
 projects[stanford_gallery][type] = "module"
 projects[stanford_gallery][download][type] = "git"
@@ -314,7 +315,7 @@ projects[stanford_image_styles][subdir] = "stanford"
 projects[stanford_image_styles][type] = "module"
 projects[stanford_image_styles][download][type] = "git"
 projects[stanford_image_styles][download][url] = "git@github.com:SU-SWS/stanford_image_styles.git"
-projects[stanford_image_styles][download][tag] = "7.x-3.4"
+projects[stanford_image_styles][download][tag] = "7.x-4.1"
 projects[stanford_landing_page][subdir] = "stanford"
 projects[stanford_landing_page][type] = "module"
 projects[stanford_landing_page][download][type] = "git"
@@ -354,7 +355,7 @@ projects[stanford_sites_helper][subdir] = "stanford"
 projects[stanford_sites_helper][type] = "module"
 projects[stanford_sites_helper][download][type] = "git"
 projects[stanford_sites_helper][download][url] = "git@github.com:SU-SWS/stanford_sites_helper.git"
-projects[stanford_sites_helper][download][tag] = "7.x-1.6"
+projects[stanford_sites_helper][download][tag] = "7.x-1.7"
 projects[stanford_slides][subdir] = "stanford"
 projects[stanford_slides][type] = "module"
 projects[stanford_slides][download][type] = "git"
@@ -405,5 +406,5 @@ projects[stanford_seven][download][tag] = "7.x-1.1"
 projects[stanford][type] = "profile"
 projects[stanford][download][type] = "git"
 projects[stanford][download][url] = "git@github.com:SU-SWS/Stanford-Drupal-Profile.git"
-projects[stanford][download][tag] = 7.x-2.2
+projects[stanford][download][tag] = 7.x-2.6
 projects[stanford][subdir] = FALSE
